# toy_obj_viewer

./: CMakeLists.txt  README.md  cam.hpp  hamood_obj_loader.hpp  main.cpp  shader.hpp
default_model/: bunny.mtl
dependencies/glad/include/glad/: glad.h
dependencies/glad/src/: glad.c
dependencies/glfw/: cmake_uninstall.cmake
dependencies/glfw/docs/: Doxyfile
shaders/: input_button_shader.fs  input_button_shader.vs  screen.fs  shader.fs  shader.vs
